--- a/src/css/all.css
+++ b/src/css/all.css
@@ -1124,3 +1124,117 @@ section#ozik p.title {
 section#ozik p.ver {
   margin-top: -1rem;
 }
+
+@media (max-width: 900px) {
+html {
+    font-size: 14px
+}
+
+.type {
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+}
+
+#input {
+    display: block;
+}
+
+#input .left {
+    display: grid;
+    margin-bottom: 2rem;
+}
+
+#input .left #table-wrapper #table-container {
+    max-height: 150px;
+}
+
+#output .plot {
+    grid-template-columns: 1fr;
+}
+
+#output .plot .container {
+    max-width: calc(100dvw - 8rem);
+}
+
+#container {
+    display: block;
+}
+
+header {
+    position: fixed;
+    z-index: 100;
+    height: 60px;
+    top: 0;
+    width: 100%;
+    padding: 0;
+}
+
+header .wrap {
+    position: unset;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    padding: 0.3rem 0.6rem;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+header img {
+    height: 100%;
+}
+
+header .top, header .bottom {
+    display: flex;
+    height: 100%;
+}
+
+header .menu, header .help {
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+}
+
+header .icon {
+    margin: 0.8rem;
+}
+
+header .icon:after {
+    width: 100% !important;
+    height: 0;
+    top: unset;
+    bottom: -1.1rem;
+    left: 0;
+}
+
+header .icon.active:after {
+    height: 0.3rem !important;
+}
+
+header .logo, header .help {
+    cursor: pointer;
+    margin: 0.3rem;
+    font-size: 0;
+    transition: .2s all;
+    position: relative;
+}
+
+header .top {
+    gap: 0.8rem;
+}
+
+header .icon.ozik {
+    margin: 0.4rem;
+}
+
+main section {
+    padding: calc(1rem + 60px) 1rem 1rem 1rem;
+}
+
+#output [class*="hasil-avs"] .sec-title.grid {
+    grid-template-columns: 1fr;
+}
+
+#output [class*="hasil-avs"] .sec-title.grid div {
+    justify-content: flex-start;
+}
+}
