--- a/src/css/all.css
+++ b/src/css/all.css
@@ -1308,11 +1308,15 @@ section#ozik p.ver {
   }
 
   header .icon {
-      margin: 0.8rem 0.5rem;
+      margin: 1rem 0.5rem;
   }
 
   header .help {
-      margin: .3rem .5rem;
+      margin: .4rem .5rem;
+  }
+
+  header .icon.ozik {
+    margin: .5rem;
   }
 
   header .logo {
